objects/CN_Sales_Performance__c.object
<CustomObject>
    <fields>
        <fullName>CN_AR_Checker_SAP__c</fullName>
        <description>PERNR（VW)</description>
        <label>AR Checker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Batch_Num_SAP__c</fullName>
        <description>CHARG</description>
        <label>Batch Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Date_SAP__c</fullName>
        <description>FKDAT</description>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Billing_No_SAP__c</fullName>
        <description>VBELN</description>
        <label>Billing No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Billing_Type_SAP__c</fullName>
        <description>FKART</description>
        <label>Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Cancelled_SAP__c</fullName>
        <description>FKSTO
值为X 时， 该记录不参与统计</description>
        <label>Cancelled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code_SAP__c</fullName>
        <description>KUNRG
External Id
Unique Id Case insensitive</description>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>CN_Customer__r.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name_SAP__c</fullName>
        <description>NAME</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Owner__c</fullName>
        <formula>CN_Customer__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Performance</relationshipLabel>
        <relationshipName>Sales_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_DN_Item_SAP__c</fullName>
        <description>VGPOS</description>
        <label>DN Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_DN_Number_SAP__c</fullName>
        <description>VGBEL</description>
        <label>DN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Date__c</fullName>
        <formula>IF(
  RecordType.DeveloperName = &apos;CN_Sales_Performance&apos;, 
  CN_Billing_Date_SAP__c ,
  IF( RecordType.DeveloperName = &apos;CN_Sales_Target&apos;,Date( VALUE(CN_Target_Year__c),VALUE( TEXT(CN_Target_Month__c) ),1),NULL ) 
)</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_External_ID_SAP__c</fullName>
        <description>EXTID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Finance_AR__c</fullName>
        <formula>CN_Customer__r.CN_Finance_AR__r.LastName &amp; &apos; &apos; &amp; CN_Customer__r.CN_Finance_AR__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance AR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Active__c</fullName>
        <formula>CN_Cancelled_SAP__c != &quot;X&quot; &amp;&amp;  CN_Returns_SAP__c != &quot;X&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Customer_Owner_Changed__c</fullName>
        <formula>AND(CN_Customer__r.OwnerId !=  OwnerId, RecordType.DeveloperName = &apos;CN_Sales_Performance&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Customer Owner Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_This_Month__c</fullName>
        <formula>OR(
  AND(YEAR(TODAY()) = YEAR( CN_Billing_Date_SAP__c ),MONTH(TODAY()) = MONTH(CN_Billing_Date_SAP__c )),
  AND( TEXT(YEAR(TODAY())) =  CN_Target_Year__c , TEXT(MONTH(TODAY())) =  TEXT(CN_Target_Month__c) )
)</formula>
        <label>Is This Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Material_CN_SAP__c</fullName>
        <description>ARKTX</description>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Material_SAP__c</fullName>
        <description>MATNR</description>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Month__c</fullName>
        <formula>IF(
  RecordType.DeveloperName = &apos;CN_Sales_Performance&apos;, 
  TEXT(MONTH(CN_Billing_Date_SAP__c )),
  IF( RecordType.DeveloperName = &apos;CN_Sales_Target&apos; ,  TEXT(CN_Target_Month__c) , NULL ) 
)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Net_Weight_SAP__c</fullName>
        <description>NTGEW</description>
        <label>Net Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Performance_Sales_Person__c</fullName>
        <formula>CN_Customer__r.CN_Sales_Person_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Group__c</fullName>
        <formula>TEXT(CN_Product__r.CN_Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Performance</relationshipLabel>
        <relationshipName>Sales_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Qty_Uom_SAP__c</fullName>
        <description>MEINS</description>
        <label>Qty Uom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quantity_SAP__c</fullName>
        <description>FKIMG</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Returns_SAP__c</fullName>
        <description>SHKZG
值为X时，统计时该记录对应的金额作为负数处理</description>
        <label>Returns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SO_Item_SAP__c</fullName>
        <description>AUPOS</description>
        <label>SO Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sale_Amount_SAP__c</fullName>
        <description>CMPRE</description>
        <label>Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sale_Net_Value_SAP__c</fullName>
        <description>netwr</description>
        <label>Sale Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Document_SAP__c</fullName>
        <description>AUBEL</description>
        <label>Sales Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office_SAP__c</fullName>
        <description>VKBUR</description>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_SAP__c</fullName>
        <description>PERNR（ER)
SAP传的是编号</description>
        <label>Sales Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Target_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Target External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Target_Month__c</fullName>
        <label>Target Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Target_Sales_Channel__c</fullName>
        <formula>Case
(  if(RecordType.Name = &apos;CN_Sales_Target&apos;, CN_Target_Sales_Person__r.CN_Sales_Team__c , Owner:User.CN_Sales_Team__c ),
   &apos;900012&apos; , &apos;DS&apos;,
   &apos;900013&apos; , &apos;KA&apos;,
   &apos;900014&apos; , &apos;WS&apos;,
   &apos;901775&apos; , &apos;QSR&apos;,
   &apos;901776&apos; , &apos;B2B&apos;,
   &apos;&apos;
)</formula>
        <label>Target Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Target_Sales_Office__c</fullName>
        <formula>Case
(
   if(RecordType.Name = &apos;CN_Sales_Target&apos;,CN_Target_Sales_Person__r.CN_Sales_Office__c, Owner:User.CN_Sales_Office__c ),
   &apos;K010&apos;,&apos;K010-Shanghai&apos;,
   &apos;K020&apos;,&apos;K020-Beijing&apos;,
   &apos;K030&apos;,&apos;K030-ShenZhen&apos;,
   &apos;K040&apos;,&apos;K040-GuangZhou&apos;,
   &apos;K050&apos;,&apos;K050-ChengDu&apos;,
   &apos;&apos;
)</formula>
<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Target_Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>You just can choose sales user</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CN Sales</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CN Sales Lead</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CN Sales Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Performance_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Target_Year__c</fullName>
        <label>Target Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Weight_Unit_SAP__c</fullName>
        <description>GEWEI</description>
        <label>Weight Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Year_Month__c</fullName>
        <formula>IF(
  RecordType.DeveloperName = &apos;CN_Sales_Performance&apos;, 
  TEXT(YEAR(CN_Billing_Date_SAP__c ))&amp;&apos;-&apos;&amp;TEXT(MONTH(CN_Billing_Date_SAP__c )),
  IF( RecordType.DeveloperName = &apos;CN_Sales_Target&apos; , CN_Target_Year__c&amp;&apos;-&apos;&amp; TEXT(CN_Target_Month__c)  , NULL ) 
)</formula>
        <label>Year Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Year__c</fullName>
        <formula>IF(
  RecordType.DeveloperName = &apos;CN_Sales_Performance&apos;, 
  TEXT(YEAR(CN_Billing_Date_SAP__c )),
  IF( RecordType.DeveloperName = &apos;CN_Sales_Target&apos; , CN_Target_Year__c , NULL ) 
)</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Performance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Customer_Code_SAP__c</columns>
        <columns>CN_Customer__c</columns>
        <columns>CN_Billing_Date_SAP__c</columns>
        <columns>CN_Billing_No_SAP__c</columns>
        <columns>CN_Billing_Type_SAP__c</columns>
        <columns>CN_Sale_Amount_SAP__c</columns>
        <columns>CN_Sale_Net_Value_SAP__c</columns>
        <columns>CN_Performance_Sales_Person__c</columns>
        <columns>CN_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sales_Performance__c.CN_Sales_Performance</value>
        </filters>
        <filters>
            <field>CN_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All - Sales Performance</label>
    </listViews>
    <listViews>
        <fullName>All_Sales_Target</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CN_Target_Year__c</columns>
        <columns>CN_Target_Month__c</columns>
        <columns>CN_Target_Sales_Person__c</columns>
        <columns>Target_Amount__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sales_Performance__c.CN_Sales_Target</value>
        </filters>
        <label>All - Sales Target</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{000000000}</displayFormat>
        <label>Sales Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Performance</pluralLabel>
    <recordTypes>
        <fullName>CN_Sales_Performance</fullName>
        <active>true</active>
        <label>Sales Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>CN_Sales_Target</fullName>
        <active>true</active>
        <label>Sales Target</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Check_Year</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName == &apos;CN_Sales_Target&apos;,
  NOT(REGEX( CN_Target_Year__c , &apos;2\\d{3}&apos;))
)</errorConditionFormula>
        <errorDisplayField>CN_Target_Year__c</errorDisplayField>
        <errorMessage>Year must be four digits starting with 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Create_Performance</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(IF($Profile.Name = &quot;System Administrator&quot;, TRUE, FALSE)),
  ISNEW(),
  RecordType.DeveloperName == &apos;CN_Sales_Performance&apos; 
)</errorConditionFormula>
        <errorMessage>You are not allowed to create sales performance</errorMessage>
    </validationRules>
</CustomObject>